--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 reflection.style.display = "none"; // Hide reflection
                 break;
             case "F":
-                image.src = "images/F.gif";
+                image.src = "images/WhatsApp Image 2024-06-24 at 3.31.30 PM.jpeg";
                 reflection.style.display = "block"; // Show reflection
                 break;
             default:
